<resources>
    <string name="app_name">Stationery Store</string>
    <string name="open">Open Drawer</string>
    <string name="close">Close Drawer</string>

    <!--login page-->
    <string name="login_email">Email Address</string>
    <string name="login_password">Password</string>
    <string name="login_btn">Login</string>

    <!--menu items-->
    <string name="retrieval">Retrieval Form</string>
    <string name="disbursement">Disbursement List</string>
    <string name="adjustment">Inventory Adjustment</string>
    <string name="approve">Approve Requisitions</string>
    <string name="representative">Assign Representative</string>
    <string name="delegation">Delegation</string>
    <string name="logout">Logout</string>

    <!--approve page-->
    <string name="comments">Comments : </string>
    <string name="Reject"> Reject </string>
    <string name="Accept"> Approve </string>

    <!--assign Rep page-->
    <string name="rep_title">Assign Department Representative</string>
    <string name="rep_save">Save</string>
    <string name="rep_current">Current Department Rep is :</string>
    <string name="rep_change">Change Department Rep to :</string>

    <!--delegate page-->
    <string name="del_title">Delegation</string>
    <string name="del_start_date">Start Date: </string>
    <string name="del_end_date">End Date: </string>
    <string name="del_emp">Employee: </string>
    <string name="del_confirm">Confirm Delegation</string>
    <string name="del_cancel">Cancel Delegation</string>

    <!--Retrieval page-->
    <string name="ret_no_items">There are no items pending retrieval</string>
    <string name="ret_bin_no">Bin #</string>
    <string name="ret_item">Item</string>
    <string name="ret_uom">UOM</string>
    <string name="ret_needed">Needed</string>
    <string name="ret_retrieved">Retrieved</string>
    <string name="ret_btn">Retrieve</string>

    <!--Disbursement pages-->
    <string name="dis_title">Disbursement List</string>
    <string name="dis_id">Disbursement ID:</string>
    <string name="dis_collection_point">Collection Point:</string>
    <string name="dis_status">Status:</string>
    <string name="dis_dept">Department:</string>
    <string name="dis_rep">Representative:</string>
    <string name="dis_item">Item</string>
    <string name="dis_description">Description</string>
    <string name="dis_delivery_qty">DeliveryQty</string>
    <string name="dis_collected_qty">CollectedQty</string>
    <string name="dis_signature">Signature:</string>
    <string name="dis_clear">Clear</string>
    <string name="dis_submit">Submit</string>
    <string name="dis_select_dept">Select Department:</string>
    <string name="dis_search">Search</string>
    <string name="dis_date">Date:</string>
    <string name="dis_view">View</string>

    <!--Adjustment pages-->
    <string name="adj_title_one">Inventory Adjustment Voucher</string>
    <string name="adj_voucher_no">Voucher No. :</string>
    <string name="adj_date_submitted">Date Submitted :</string>
    <string name="adj_submitted_by">Submitted By :</string>
    <string name="adj_total_value">Total Value :</string>
    <string name="adj_status">Status :</string>
    <string name="adj_item_code">Item Code</string>
    <string name="adj_description">Description</string>
    <string name="adj_quantity">Quantity</string>
    <string name="adj_reason">Reason</string>
    <string name="adj_title_many">Inventory Adjustment Vouchers</string>
    <string name="adj_no_vouchers">There are no inventory adjustment vouchers</string>
    <string name="adj_create_new">Create New Voucher</string>
    <string name="adj_submit">Submit</string>

    <!--error messages during login-->
    <string name="error_empty_inputs">Please enter Email and Password</string>
    <string name="error_wrong_inputs">Email or Password is wrong</string>
    <string name="error_unauthorised">You are not authorised to use this mobile app</string>
    <string name="error_no_connection">Error in connection with server</string>

    <!--error messages during delegation-->
    <string name="error_del_date_empty">Start date and end date cannot be empty</string>
    <string name="error_del_date_invalid">End date cannot be earlier than start date</string>

    <!--error messages during retrieval-->
    <string name="error_retrieve">There are invalid values entered for retrieved quantity</string>

    <!--error messages during adjustment-->
    <string name="error_adj_qty_zero">Quantity cannot be 0</string>
    <string name="error_adj_no_type">Please select the type of adjustment</string>
    <string name="error_adj_qty_empty">Quantity cannot be empty</string>
    <string name="error_adj_qty_invalid">Adjustment quantity cannot be more than warehouse quantity</string>

    <!--error message if quantity input is wrong-->
    <string name="error_qty_big">Quantity cannot be more than 9999</string>
    <string name="error_no_reason">Reason cannot be empty</string>

    <!--alert dialog titles and messages-->
    <string name="dialog_retrieve_title">Retrieve Items</string>
    <string name="dialog_retrieve_msg">
        Confirm retrieval of items from warehouse? Disbursement lists will be generated.
    </string>
    <string name="dialog_adj_title">Submit Adjustment Voucher</string>
    <string name="dialog_adj_msg">Confirm submission of adjustment voucher?</string>
    <string name="dialog_del_title">Delegation</string>
    <string name="dialog_del_msg">Confirm delegation?</string>
    <string name="dialog_del_cancel_title">Cancel Delegation</string>
    <string name="dialog_del_cancel_msg">Confirm cancellation?</string>
    <string name="dialog_rep_title">Change Department Rep</string>
    <string name="dialog_rep_msg">Confirm change in department representative?</string>

    <!--toast messages when submissions are successful-->
    <string name="toast_aprv">Requisition form processed!</string>
    <string name="toast_adj">Adjustment voucher submitted successfully!</string>
    <string name="toast_retrieve">Retrieve successful!\nDisbursement lists have been generated.</string>
    <string name="toast_del">Delegation successful!</string>
    <string name="toast_del_cancel">Cancellation successful!</string>
    <string name="toast_rep">Change in representative successful!</string>

</resources>
