<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".store.RetrievalFrag">

    <TextView
        android:id="@+id/retrieve_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/retrieval"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="8dp"/>

    <TextView
        android:id="@+id/ret_empty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/ret_no_items"
        app:layout_constraintBottom_toTopOf="@id/error_retrieve"
        app:layout_constraintTop_toBottomOf="@id/retrieve_title"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyleLargeInverse"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/error_retrieve"
        app:layout_constraintTop_toBottomOf="@id/retrieve_title"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/error_retrieve"
        app:layout_constraintTop_toBottomOf="@id/retrieve_title">

        <TableLayout
            android:id="@+id/retrieve_table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:stretchColumns="*">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/retrieval"
                    android:text="@string/ret_bin_no" />

                <TextView
                    style="@style/retrieval"
                    android:text="@string/ret_item" />

                <TextView
                    style="@style/retrieval"
                    android:text="@string/ret_uom" />

                <TextView
                    style="@style/retrieval"
                    android:text="@string/ret_needed" />

                <TextView
                    style="@style/retrieval"
                    android:text="@string/ret_retrieved" />
            </TableRow>

        </TableLayout>

    </ScrollView>

    <TextView
        android:id="@+id/error_retrieve"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@android:color/holo_red_dark"
        app:layout_constraintBottom_toTopOf="@id/retrieve_btn"
        android:text="@string/error_retrieve" />

    <Button
        android:id="@+id/retrieve_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/ret_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>