<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="30dp"
            android:gravity="center"
            android:text="@string/rep_title"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            style="@style/rep_text"
            android:text="@string/rep_current"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/rep_current"
            style="@style/rep_text"
            tools:text="Tan Ah Kow" />

        <TextView
            style="@style/rep_text"
            android:text="@string/rep_change"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/rep_emp_list"
            style="@style/rep_text"
            android:layout_width="match_parent" />

    </LinearLayout>

    <Button
        android:id="@+id/rep_save_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:padding="20dp"
        android:text="@string/rep_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>