<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/disbursementTitle"
        style="@style/approve_linear_horizontal"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dis_title"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/disbursement_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/disbursementTitle">

        <ScrollView
            android:id="@+id/scrollview"
            android:layout_width="match_parent"
            android:layout_height="580dp"
            android:fillViewport="true"
            android:paddingBottom="50dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/disbursement_info"
                    style="@style/approve_linear_horizontal"
                    android:orientation="vertical"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/disbursementTitle">

                    <LinearLayout
                        android:id="@+id/row1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="10dp"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/DisbursementTV"
                            android:text="@string/dis_id"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/disbursement_id"
                            style="@style/DisbursementTVInfo"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/row2"
                        style="@style/approve_linear_horizontal"
                        android:layout_marginBottom="10dp"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/row1">

                        <TextView
                            style="@style/DisbursementTV"
                            android:text="@string/dis_collection_point"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/collection_point"
                            style="@style/DisbursementTVInfo" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/row3"
                        style="@style/approve_linear_horizontal"
                        android:layout_marginBottom="10dp"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/row2">

                        <TextView
                            style="@style/DisbursementTV"
                            android:text="@string/dis_status"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/status"
                            style="@style/DisbursementTVInfo" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/row4"
                        style="@style/approve_linear_horizontal"
                        android:layout_marginBottom="10dp"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/row3">

                        <TextView
                            style="@style/DisbursementTV"
                            android:text="@string/dis_dept"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/department"
                            style="@style/DisbursementTVInfo" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/row5"
                        style="@style/approve_linear_horizontal"
                        android:layout_marginBottom="10dp"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/row4">

                        <TextView
                            style="@style/DisbursementTV"
                            android:text="@string/dis_rep"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/representative"
                            style="@style/DisbursementTVInfo" />
                    </LinearLayout>
                </LinearLayout>

                <TableLayout
                    android:id="@+id/table"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:stretchColumns="*">

                    <TableRow
                        android:id="@+id/table_header"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:text="@string/dis_item"
                            android:textSize="15sp" />

                        <TextView
                            style="@style/disbursementTableCol"
                            android:layout_height="wrap_content"
                            android:text="@string/dis_description" />

                        <TextView
                            style="@style/disbursementTableCol"
                            android:layout_height="wrap_content"
                            android:gravity="end"
                            android:text="@string/dis_delivery_qty" />

                        <TextView
                            style="@style/disbursementTableCol"
                            android:layout_height="wrap_content"
                            android:gravity="end"
                            android:text="@string/dis_collected_qty" />
                    </TableRow>

                </TableLayout>

                <LinearLayout
                    android:id="@+id/commentRow"
                    style="@style/approve_linear_horizontal"
                    android:orientation="vertical"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/table">

                    <TextView
                        style="@style/ApproveTV"
                        android:text="@string/comments"
                        android:textColor="@color/black" />

                    <EditText
                        android:id="@+id/remarks"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:layout_margin="4dp"
                        android:background="@drawable/edit_text_style"
                        android:gravity="start" />

                    <TextView
                        android:id="@+id/TV_remarks"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/signature_row"
                    style="@style/approve_linear_horizontal"
                    android:orientation="vertical"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/commentRow">

                    <TextView
                        style="@style/ApproveTV"
                        android:text="@string/dis_signature"
                        android:textColor="@color/black" />

                    <com.yingxuan.stationerystore.model.SignView
                        android:id="@+id/sign_view"
                        android:layout_width="match_parent"
                        android:layout_height="180dp"
                        android:layout_marginTop="16dp" />

                    <ImageView
                        android:id="@+id/IV_signature"
                        android:layout_width="match_parent"
                        android:layout_height="180dp"
                        android:layout_marginTop="16dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/clearSign"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="80dp"
                        android:text="@string/dis_clear" />

                    <Button
                        android:id="@+id/confirmBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="50dp"
                        android:text="@string/dis_submit" />

                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>